Fixed alignment of graphviz images in documentation

--- a/doc/_static/sam-custom.css
+++ b/doc/_static/sam-custom.css
@@ -12,3 +12,7 @@ div.figure {
 	text-align: center;
 	font-style: italic;
 }
+
+div p.graphviz {
+	text-align: center;
+}
